show datepicker on mousedown + z-index issue fixed

--- a/webapp/finder/find/theme/styles/theme.css
+++ b/webapp/finder/find/theme/styles/theme.css
@@ -2601,10 +2601,6 @@ i.caret.exp {
   font-size: 1;
 }
 
-#ui-datepicker-divX {
-  z-index: 2 !important;
-}
-
 .filter-box .select2-container--default .select2-selection--multiple {
   border-radius: 0;
 }
